...
            if let viewModel {
                formContent(viewModel: viewModel)
            } else {
                ProgressView()
            }
        }
        .navigationTitle("Log Activity")
        .inlineNavigationBarTitle()
        .onAppear {
            if viewModel == nil {
                viewModel = LogActivityViewModel(
                    childId: childId,
                    activityRepository: ActivityRepository(dittoManager: DittoManager.shared)
...
